--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
   background-size: cover;
-  background-image: url("../../public/images/bg.png");
+  background-image: url("../../public/images/bg2.png");
 }
 
 .content {
@@ -16,8 +16,14 @@
   &::-webkit-scrollbar {
     display: none;
   }
+  .swiper {
+  
+  }
   .items {
     display: flex;
+    position: relative;
+    width: 300px;
+    height: 600px;
     align-items: end; 
     z-index: 99;
     transition: all 0.5s;
@@ -25,74 +31,93 @@
       transform-origin: 50% 100%;
       transform: scale(1.2);
       filter: blur(0.5px);
-      height: 100vh;
-      background-image: url("../../public/images/fire_ax9aixlu.gif");
-      background-size: cover;      
+      background-image: url("../../public/images/SoupyPalatableBarnowl-max-1mb.gif");
 
     }
     .item-image {
-      
-      
+      width: 300px;
+    }
+    .vote-btn {
+      position: absolute;
+      bottom: 30%;
+      left: 50%;
     }
   }
 }
 
 .header {
-  border: 1px solid black;
-
+  font-family: "nexon";
   display: flex;
-  width: 50%;
-  height: 55%;
+  flex-direction: column;
+  width: 400px;
+  height: 500px;
+  /* width: 25%;
+  min-width: 430px;
+  height: 60%; */
   position: absolute;
-  top: 10%;
+  top: 5%;
   left: 5%;
-  .info {
-    border: 1px solid blue;
+  /* width: 100%; */
+  /* padding: 2.5%; */
+  .title {
     display: flex;
-    width: 50%;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    /* font-size: 3vh;  */
+    font-weight: 600;
+    /* height: 15%; */
+  }
+  .ranking {
+    /* height: 70%; */
+    display: flex;
     flex-direction: column;
-    padding: 2.5%;
-    .ranking {
-      height: 70%;
+    justify-content: space-between;
+    height: 350px;
+    .item {
+      position: relative;
+      background-color: #fdd5d5;
+      border-radius: 12px;
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      .item {
-        position: relative;
-        border: 1px solid black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 6vh;
-        font-size: 2vh;
-        padding: 5% 0;
-        .item-image::after {
-          content: "";
-          display: block;
-          position: absolute;
-          bottom: 0px;
-          width: 11vh;
-          height: 11vh;
-          background-image: url("../../public/images/SoupyPalatableBarnowl-max-1mb.gif");
-          background-size: cover;
-        }
-        img {
-          position: absolute;
-          z-index: 99;
-          bottom: 0px;
-          width: 11vh;
-          height: 11vh;
-        }
+      justify-content: center;
+      align-items: center;
+      height: 55px;
+      /* height: 6vh;
+      font-size: 2vh;
+      padding: 5% 0; */
+      .item-image::after {
+        content: "";
+        display: block;
+        position: absolute;
+        bottom: 0px;
+        /* width: 11vh;
+        height: 11vh; */
+        background-image: url("../../public/images/SoupyPalatableBarnowl-max-1mb.gif");
+        background-size: cover;
+      }
+      img {
+        position: absolute;
+        z-index: 99;
+        bottom: 0px;
+        width: 110px;
+        height: 110px;
       }
     }
-    .help {
-      height: 30%;
-      font-size: 2.5vh;
-      button {
-        font-size: 1vh;
-        height: 2.5vh;
-        width: 4vw;
-      }
+  }
+  .help {
+    z-index: 9999;
+    display: flex;
+    height: 100px;
+    font-size: 2vh;
+    padding: 10% 5%;
+    button {
+      font-size: 1vh;
+      height: 2.5vh;
+      width: 4vw;
+    }
+    .help-image {
+      display: flex;
+      justify-content: end;
     }
   }
   .character {
