--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,3 +1,19 @@
+@font-face {
+	font-family: "nexon";
+	src: url("../../public/fonts/NEXON Lv2 Gothic OTF.woff");
+}
+@font-face {
+	font-family: "nexon";
+	src: url("../../public/fonts/NEXON Lv2 Gothic OTF.woff");
+}
+@font-face {
+	font-family: "nexon";
+	src: url("../../public/fonts/NEXON Lv2 Gothic OTF.woff");
+}
+@font-face {
+	font-family: "nexon";
+	src: url("../../public/fonts/NEXON Lv2 Gothic OTF.woff");
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
