--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -37,6 +37,9 @@
     .item-image {
       width: 300px;
     }
+    .item-symbol {
+      width: 50px;
+    }
     .vote-btn {
       position: absolute;
       bottom: 30%;
@@ -44,7 +47,12 @@
     }
   }
 }
+.vote {
+  float: right;
+  font-family: "nexon";
+  font-size: 40px;
 
+}
 .header {
   font-family: "nexon";
   display: flex;
