--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -147,3 +147,14 @@
     height: 30vh;
   }
 }
+
+.loader-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index : 999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.1);
+}
