--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -28,6 +28,7 @@
     z-index: 99;
     transition: all 0.5s;
     &:hover {
+      cursor: pointer;
       transform-origin: 50% 100%;
       transform: scale(1.2);
       filter: blur(0.5px);
@@ -146,4 +147,27 @@
     width: 30vw;
     height: 30vh;
   }
+}
+.glow {
+  line-height: 100px;
+  font-size: 40px;
+  color: #fff;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+
+.below-txt {
+  font-family: "nexon";
+  position: absolute;
+  top: 300px;
 }
